correct settings initial visibility

--- a/prediction.css
+++ b/prediction.css
@@ -236,7 +236,7 @@
     position: absolute;
     width: 100%;
     text-align: center;
-    font-size: 2.6vh;
+    font-size: 3.6vh;
     line-height: 0.8;
     height: 8vh;
     display: flex;
